# eth-indexer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
app/cli/: Cargo.toml
app/cli/src/: main.rs
app/cli/src/cli/: cmd.rs  read.rs
app/cli/src/cli/engine/: args.rs  run.rs
app/cli/src/cli/query/: args.rs  read.rs  response.rs  run.rs
libs/chain/: Cargo.toml
libs/chain/src/: lib.rs  rpc.rs
libs/chain/tests/: chain.rs
libs/engine/: Cargo.toml
libs/engine/src/: args.rs  checkpointer.rs  consumer.rs  engine.rs  gapfiller.rs  lib.rs  live_watcher.rs  processor.rs  utils.rs
libs/engine/src/live/pubsub/: publisher.rs  subscriber.rs
libs/engine/src/live/sink/: transfer.rs
libs/engine/src/live/source/: handle.rs  log.rs
libs/engine/src/live/state/: event.rs  logic.rs
libs/engine/src/processor/: handle.rs  transfer.rs
libs/engine/src/pubsub/: event.rs  mod.rs  publisher.rs  subscriber.rs
libs/engine/src/sink/: handle.rs  mod.rs  transfer.rs
libs/engine/src/source/: filter.rs  handle.rs  log.rs  mod.rs
libs/engine/src/state/: event.rs  logic.rs  mod.rs  outcome.rs
libs/engine/tests/: engine.rs
libs/store/: Cargo.toml
libs/store/resources/: create_tables.sql
libs/store/src/: adapter.rs  client.rs  lib.rs  model.rs  pretty.rs  store.rs  utils.rs
libs/store/src/checkpoint/: adapter.rs  model.rs  pretty.rs  store.rs
libs/store/src/transfer/: adapter.rs  model.rs  pretty.rs  store.rs
libs/store/tests/: store.rs
libs/sync/: Cargo.toml
libs/sync/src/: consumer.rs  producer.rs
libs/sync/tests/: consumer.rs  producer.rs  sync.rs
resources/docs/: README.md  demo.md  features.md  install.md  usage.md
resources/tests/: demo.sh
resources/tests/demo/: .env  common.sh  play.sh  setup.sh  test.sh
resources/tests/zamatoken/: ZamaToken.sol
tests/resources/zamatoken/: ZamaToken.json
