[package]
name = "chain"
version = "0.1.0"
edition = "2024"

[lib]
name = "chain"
path = "src/lib.rs"
test = false

[dependencies]
alloy = { version = "1.0.24", default-features = false, features = [
    "node-bindings",
    "rpc-client",
    "eips",
    "network",
    "providers",
    "signers",
    "signer-local",
    "sol-types",
    "json",
    "contract",
] }
eyre = "0.6.12"
futures-util = "0.3.31"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
