[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
chain = { path = "../chain" }
sync = { path = "../sync" }
alloy = { version = "1.0.24", features = ["rpc-types"] }
eyre = "0.6.12"
futures-util = "0.3.31"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "sync", "time"] }