[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "engine"
path = "src/lib.rs"
test = false

[dependencies]
chain = { path = "../chain" }
sync = { path = "../sync" }
store = { path = "../store" }
alloy = { version = "1.0.24", features = ["rpc-types"] }
eyre = "0.6.12"
futures-util = "0.3.31"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "sync", "time"] }
sqlx = "0.8.6"
async-trait = "0.1.88"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
