[package]
name = "store"
version = "0.1.0"
edition = "2024"

[lib]
name = "store"
path = "src/lib.rs"
test = false

[dependencies]
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
eyre = "0.6.12"
alloy = { version = "1.0.24", features = ["rpc-types"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }